--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,10 +46,17 @@ old-e-h      = { version = "0.2.4", package = "embedded-hal" }
 embedded-hal-compat = "0.1.3" 
 
 #radio-sx127x  = { version = "0.10.1",        default-features = false }
-#radio-sx127x  = {  git = "https://github.com/rust-iot/rust-radio-sx127x", default-features = false }
-radio-sx127x  = {  git = "https://github.com/pdgilbert/rust-radio-sx127x", default-features = false }
+#radio         = { version = "0.4.0" }
+#  build fails with wrong number of arguments ...
 
+#radio-sx127x  = {  git = "https://github.com/rust-iot/rust-radio-sx127x", default-features = false }
+#radio         = { version = "0.7.0" }
+#  builds
+
+radio-sx127x  = {  git = "https://github.com/pdgilbert/rust-radio-sx127x", default-features = false }
 radio         = { version = "0.8.1" }
+#  builds
+
 driver-pal    = { version = "0.8.0-alpha.0", default-features = false }
 
 stm32f0xx-hal = { git = "https://github.com/stm32-rs/stm32f0xx-hal", optional = true }
