--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,7 +34,8 @@ jobs:
         mcu: [stm32f030xc, stm32f100, stm32f101, stm32f103, stm32f303xc, stm32f401, stm32f411, stm32f722,
               stm32h742, stm32l0x2, stm32l100, stm32l151, stm32l4x2, ]
         
-        bin:  [ lora_spi_send, lora_spi_receive, lora_spi_gps ]
+        #bin:  [ lora_spi_send, lora_spi_receive, lora_spi_gps ]
+        # bins are all built because they are in the Cargo.toml.
         
         include:
            - mcu:  stm32f030xc
@@ -95,13 +96,6 @@ jobs:
         with:
           profile: minimal
           toolchain: stable
-      - name: Build
-        uses: actions-rs/cargo@v1 
-        with:
-          command: build
-          args:  --release --target ${{ matrix.trg }} --features ${{ matrix.mcu }}
-          use-cross: true
-
       - name: tree
         uses: actions-rs/cargo@v1 
         with:
@@ -119,10 +113,17 @@ jobs:
           command: tree
           args:  -i -p embedded-hal:1.0.0-alpha.4
 
-      - name: Build bin 
-        uses: actions-rs/cargo@v1
+      - name: Build
+        uses: actions-rs/cargo@v1 
         with:
           command: build
-          args:  --release --target ${{ matrix.trg }} --features ${{ matrix.hal }},${{ matrix.mcu }} --bin ${{ matrix.bin }}
+          args:  --release --target ${{ matrix.trg }} --features ${{ matrix.hal }},${{ matrix.mcu }}
           use-cross: true
+
+      #- name: Build bin 
+      #  uses: actions-rs/cargo@v1
+      #  with:
+      #    command: build
+      #    args:  --release --target ${{ matrix.trg }} --features ${{ matrix.hal }},${{ matrix.mcu }} --bin ${{ matrix.bin }}
+      #    use-cross: true
 
