--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,12 @@ cortex-m-rt          = { version = ">=0.6.8" }
 panic-reset          = { version = ">=0.1.0" }
 panic-halt           = { version = ">=0.2.0" }
 
+ads1x1x =  { version = "0.2.1"}
+#ssd1306   = { version = ">=0.5.2"}
+ssd1306   = { git = "https://github.com/jamwaffles/ssd1306"  }  #version = "0.3.1" # "0.2.6" "0.3.1" 
+embedded-graphics   = { version = ">=0.6.0" }                   #version = ">=0.6.0" #  "0.4.4" # "0.4.9"  "0.6.2" 
+shared-bus = { version = "0.1.4", features = ["cortexm"] }
+
 embedded-spi = { version = "0.6", default-features = false }
 
 # for radio-sx127x which uses embedded-hal 1.0.0-alpha while device crates still use 0.2.4
