CI workflow by board rather than mcu.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,7 +2,7 @@ name: LoRaGPS-rust
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, add-monitor ]
   pull_request:
     branches: [ master ]
 
