--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,13 +55,13 @@ embedded-hal-compat = "0.1.3"
 #radio         = { version = "0.4.0" }
 #  build fails with wrong number of arguments ...
 
-#radio-sx127x  = {  git = "https://github.com/rust-iot/rust-radio-sx127x", default-features = false }
+radio-sx127x  = {  git = "https://github.com/rust-iot/rust-radio-sx127x", default-features = false }
+#radio         = {  git = "https://github.com/rust-iot/radio-hal", default-features = false }
 #radio         = { version = "0.7.0" }
-#  builds
 
-radio-sx127x  = {  git = "https://github.com/pdgilbert/rust-radio-sx127x", default-features = false }
-radio         = { version = "0.8.1" }
-#  builds
+#radio-sx127x  = {  git = "https://github.com/pdgilbert/rust-radio-sx127x", default-features = false }
+#radio         = { version = "0.8.1" }
+radio         = { version = "0.9.0" }
 
 driver-pal    = { version = "0.8.0-alpha.3", default-features = false }
 
