--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,7 +72,9 @@ stm32l4xx-hal = { git = "https://github.com/stm32-rs/stm32l4xx-hal", optional = 
 
 # for bugs and unusual return values in some hals
 void          = { version = ">=1.0.2", default-features = false }
-heapless = ">=0.4.3"
+
+#heapless = ">=0.4.3"
+heapless = ">=0.7"
 
 cortex-m-semihosting = { version = ">=0.3.3" }
 panic-semihosting    = { version = ">=0.5.2" }
