--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,9 +31,11 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        brd: [none-stm32f030, none-stm32f030, none-stm32f101, bluepill, discovery-stm32f303, 
-              blackpill-stm32f401, blackpill-stm32f411, none-stm32f722, none-stm32h742, 
-              none-stm32l0x2, discovery-stm32l100, heltec-lora-node151, none-stm32l4x2 ]
+        brd: [none-stm32f030,      none-stm32f042,      none-stm32f101,      bluepill,
+              discovery-stm32f303, blackpill-stm32f401, blackpill-stm32f411, none-stm32f722,
+              none-stm32h742,      none-stm32l0x2,      discovery-stm32l100, heltec-lora-node151, 
+              none-stm32l4x2 ]
+        #none-stm32f100
         #mcu: [stm32f030xc, stm32f100, stm32f101, stm32f103, stm32f303xc, stm32f401, stm32f411, stm32f722,
         #      stm32h742, stm32l0x2, stm32l100, stm32l151, stm32l4x2, ]
         
@@ -45,10 +47,10 @@ jobs:
              mcu:  stm32f030xc
              hal: "stm32f0xx"
              trg: "thumbv6m-none-eabi"   
-           - brd: "none-stm32f100"
-             mcu:  stm32f100
-             hal: "stm32f1xx"
-             trg: "thumbv7m-none-eabi"
+           - brd: "none-stm32f042"
+             mcu:  stm32f042
+             hal: "stm32f0xx"
+             trg: "thumbv6m-none-eabi"   
            - brd: "none-stm32f101"
              mcu:  stm32f101
              hal: "stm32f1xx"
