--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,9 +39,9 @@ panic-reset          = { version = ">=0.1.0" }
 panic-halt           = { version = ">=0.2.0" }
 
 ads1x1x =  { version = "0.2.1"}
-#ssd1306   = { version = ">=0.5.2"}
-ssd1306   = { git = "https://github.com/jamwaffles/ssd1306"  }  #version = "0.3.1" # "0.2.6" "0.3.1" 
-embedded-graphics   = { version = ">=0.7.0" }                   #version = ">=0.6.0" #  "0.4.4" # "0.4.9"  "0.6.2" 
+ssd1306   = { version = ">=0.6.0"}
+#ssd1306   = { git = "https://github.com/jamwaffles/ssd1306"  }  
+embedded-graphics   = { version = ">=0.7.0" }                 
 shared-bus = { version = "0.1.4", features = ["cortexm"] }
 
 embedded-spi = { version = "0.6", default-features = false }
