--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,6 +5,8 @@ on:
     branches: [ master, add-monitor ]
   pull_request:
     branches: [ master ]
+  schedule:
+    - cron: 0 1 * * 1
 
 env:
   CARGO_TERM_COLOR: always
