--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,12 @@ path = "src/bin/send_gps.rs"
 #cortex-m            = { version = ">=0.7.1" }
 cortex-m             = { version = ">=0.6.4" }  #as of March 2021 needed for stm32h742,  stm32l0x2, stm32l4x2 but others need >=0.7.0
 nb                   = { version = ">=0.1.2" }
-cortex-m-rt          = { version = ">=0.6.8" }
+# note that cortex-m-rt 0.7.0 causes link problem 
+# Linking globals named 'error: cortex-m-rt appears more than once in the dependency graph': symbol multiply defined!
+#error: failed to load bc of "cortex_m_rt-f826bb109239e9a9.cortex_m_rt.2itra1ai-cgu.0.rcgu.o": 
+# until device crates also update.
+# see https://github.com/rust-embedded/cortex-m/issues/310
+cortex-m-rt          = { version = "^0.6.8" }
 panic-reset          = { version = ">=0.1.0" }
 panic-halt           = { version = ">=0.2.0" }
 
@@ -47,12 +52,14 @@ shared-bus = { version = ">=0.1.4", features = ["cortexm"] }
 embedded-spi = { version = ">=0.6", default-features = false }
 
 # for radio-sx127x which uses embedded-hal 1.0.0-alpha while device crates still use 0.2.4
-embedded-hal = { version = "1.0.0-alpha.4" }
-old-e-h      = { version = "0.2.4", package = "embedded-hal" }
+embedded-hal = { version = "1.0.0-alpha.4, <1.0.0-alpha.5" }
+#embedded-hal = { version = "1.0.0-alpha.5" }  
+old-e-h      = { version = "0.2.6", package = "embedded-hal" }
 
 #radio         = {  git = "https://github.com/rust-iot/radio-hal", default-features = false }
 
 embedded-hal-compat = "0.1.3" 
+#embedded-hal-compat = ">=0.1.3" 
 
 #radio-sx127x  = {  git = "https://github.com/pdgilbert/rust-radio-sx127x", default-features = false }
 #radio         = { version = "0.8.1" }
