--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,15 +68,17 @@ embedded-hal-compat = "0.4.0"
 #radio-sx127x  = { version = "0.11.0", default-features = false }
 radio-sx127x  = {  git = "https://github.com/rust-iot/rust-radio-sx127x", default-features = false }
 #radio         = { version = "0.9.0" }
-radio         = { git = "https://github.com/rust-iot/radio-hal" }
+radio         = { version = "0.9.1" }
+#radio         = { git = "https://github.com/rust-iot/radio-hal" }
 
 
-driver-pal    = { version = "0.8.0-alpha.3", default-features = false }
+#driver-pal   = { version = "0.8.0-alpha.3", default-features = false }
+driver-pal   = { git = "https://github.com/ryankurte/rust-driver-pal/", default-features = false } # 0.8.0-alpha5
 
 stm32f0xx-hal = { git = "https://github.com/stm32-rs/stm32f0xx-hal", optional = true }
 stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal", optional = true }
 stm32f3xx-hal = { git = "https://github.com/stm32-rs/stm32f3xx-hal", optional = true }
-stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", optional = true }
+#stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", optional = true } conflict using newer version of cortex-m-rt
 stm32f7xx-hal = { git = "https://github.com/stm32-rs/stm32f7xx-hal", optional = true }
 #stm32f7xx-hal = { git = "https://github.com/pdgilbert/stm32f7xx-hal", branch="test-bxcan-version-relax", optional = true }
 stm32h7xx-hal = { git = "https://github.com/stm32-rs/stm32h7xx-hal", optional = true }
@@ -99,7 +101,7 @@ panic-semihosting    = { version = ">=0.5.2" }
 stm32f0xx = []
 stm32f1xx = []
 stm32f3xx = []
-stm32f4xx = []
+#stm32f4xx = []
 stm32f7xx = []
 stm32h7xx = []
 stm32l0xx = []
@@ -113,9 +115,9 @@ stm32f100 = ["stm32f1xx-hal/stm32f100", "stm32f1xx-hal/rt"]
 stm32f101 = ["stm32f1xx-hal/stm32f101", "stm32f1xx-hal/rt"]
 stm32f103 = ["stm32f1xx-hal/stm32f103", "stm32f1xx-hal/rt"]
 stm32f303xc = ["stm32f3xx-hal/stm32f303xc", "stm32f3xx-hal/rt"] 
-stm32f401 = ["stm32f4xx-hal/stm32f401", "stm32f4xx-hal/rt"] 
-stm32f405 = ["stm32f4xx-hal/stm32f405", "stm32f4xx-hal/rt"] 
-stm32f411 = ["stm32f4xx-hal/stm32f411", "stm32f4xx-hal/rt"] 
+#stm32f401 = ["stm32f4xx-hal/stm32f401", "stm32f4xx-hal/rt"] 
+#stm32f405 = ["stm32f4xx-hal/stm32f405", "stm32f4xx-hal/rt"] 
+#stm32f411 = ["stm32f4xx-hal/stm32f411", "stm32f4xx-hal/rt"] 
 stm32f722 = ["stm32f7xx-hal/stm32f722", "stm32f7xx-hal/rt"] 
 stm32h742 = ["stm32h7xx-hal/stm32h742", "stm32h7xx-hal/rt"]
 # see https://www.st.com/resource/en/datasheet/stm32l072v8.pdf  p12 for some MCU variants
