--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,7 +78,7 @@ driver-pal   = { git = "https://github.com/ryankurte/rust-driver-pal/", default-
 stm32f0xx-hal = { git = "https://github.com/stm32-rs/stm32f0xx-hal", optional = true }
 stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal", optional = true }
 stm32f3xx-hal = { git = "https://github.com/stm32-rs/stm32f3xx-hal", optional = true }
-#stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", optional = true } conflict using newer version of cortex-m-rt
+#stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", optional = true } #conflict using newer version of cortex-m-rt
 stm32f7xx-hal = { git = "https://github.com/stm32-rs/stm32f7xx-hal", optional = true }
 #stm32f7xx-hal = { git = "https://github.com/pdgilbert/stm32f7xx-hal", branch="test-bxcan-version-relax", optional = true }
 stm32h7xx-hal = { git = "https://github.com/stm32-rs/stm32h7xx-hal", optional = true }
