--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -102,7 +102,7 @@ jobs:
           command: tree
           args:  -i -p embedded-hal:0.2.6
 
-      - name: tree e-h 1.0.0-alpha.4
+      - name: tree e-h 1.0.0-alpha
         uses: actions-rs/cargo@v1 
         with:
           command: tree
