--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ shared-bus = { version = ">=0.1.4", features = ["cortexm"] }
 embedded-spi = { version = ">=0.6", default-features = false }
 
 # for radio-sx127x which uses embedded-hal 1.0.0-alpha while device crates still use 0.2.x
-embedded-hal = { version = "1.0.0-alpha.5" }  
+embedded-hal = { version = "1.0.0-alpha.5,<1.0.0-alpha.6" }  
 old-e-h      = { version = "0.2.6", package = "embedded-hal" }
 
 embedded-hal-compat = "0.4.0" 
@@ -54,6 +54,7 @@ embedded-hal-compat = "0.4.0"
 #radio-sx127x  = {  git = "https://github.com/pdgilbert/rust-radio-sx127x", default-features = false }
 
 #radio-sx127x  = { version = "0.11.0", default-features = false }
+#radio-sx127x  = { version = "0.12.0", default-features = false }
 radio-sx127x  = {  git = "https://github.com/rust-iot/rust-radio-sx127x", default-features = false }
 radio         = { version = "0.9.1" }
 #radio         = {  git = "https://github.com/rust-iot/radio-hal", default-features = false }
